// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveCoachScreen renders disconnected state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9FAFB",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 8,
      }
    }
    keyboardShouldPersistTaps="handled"
    style={
      {
        "flex": 1,
      }
    }
    testID="live-coach-scroll"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#111827",
              "flex": 1,
              "flexShrink": 1,
              "fontSize": 24,
              "fontWeight": "700",
              "marginRight": 8,
            }
          }
        >
          Live Coach
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 0,
              "gap": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "height": 10,
                  "width": 10,
                },
                {
                  "backgroundColor": "#EF4444",
                },
              ]
            }
            testID="connection-status"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "600",
                  "minWidth": 92,
                  "textAlign": "right",
                  "textTransform": "capitalize",
                },
                {
                  "color": "#EF4444",
                },
              ]
            }
          >
            disconnected
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "gap": 6,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="live-mode-picker"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Session mode
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 6,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#4A90D9",
                "borderColor": "#4A90D9",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-earpiece"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Earpiece
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-speaker"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              In person
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-therapist"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Therapist
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-call"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Call
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 12.5,
              "lineHeight": 17,
            }
          }
          testID="session-mode-hint"
        >
          Phone to your ear or on a call — the coach whispers to you privately.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="speak-aloud-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Speak aloud
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="speak-aloud-switch"
          value={true}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          coach speaks — use an earbud
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="scoreboard-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Scoreboard
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="scoreboard-switch"
          value={false}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          off
        </Text>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Empathy: 
          50
           — 
          Balanced
        </Text>
        <View
          testID="empathy-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Assertive
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Full Empathy
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Interject: 
          0
           — 
          Every turn
        </Text>
        <View
          testID="interject-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Every turn
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Critical only
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 40,
          }
        }
        testID="live-transcript-empty"
      >
        <Text
          style={
            {
              "color": "#9CA3AF",
              "fontSize": 15,
              "fontStyle": "italic",
            }
          }
        >
          Waiting for conversation...
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4A90D9",
        "borderRadius": 12,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "opacity": 1,
        "paddingVertical": 16,
      }
    }
    testID="mic-toggle"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Start Listening
    </Text>
  </View>
</View>
`;

exports[`LiveCoachScreen renders initial idle state 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9FAFB",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 8,
      }
    }
    keyboardShouldPersistTaps="handled"
    style={
      {
        "flex": 1,
      }
    }
    testID="live-coach-scroll"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#111827",
              "flex": 1,
              "flexShrink": 1,
              "fontSize": 24,
              "fontWeight": "700",
              "marginRight": 8,
            }
          }
        >
          Live Coach
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 0,
              "gap": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "height": 10,
                  "width": 10,
                },
                {
                  "backgroundColor": "#9CA3AF",
                },
              ]
            }
            testID="connection-status"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "600",
                  "minWidth": 92,
                  "textAlign": "right",
                  "textTransform": "capitalize",
                },
                {
                  "color": "#9CA3AF",
                },
              ]
            }
          >
            idle
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "gap": 6,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="live-mode-picker"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Session mode
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 6,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#4A90D9",
                "borderColor": "#4A90D9",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-earpiece"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Earpiece
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-speaker"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              In person
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-therapist"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Therapist
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-call"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Call
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 12.5,
              "lineHeight": 17,
            }
          }
          testID="session-mode-hint"
        >
          Phone to your ear or on a call — the coach whispers to you privately.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="speak-aloud-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Speak aloud
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="speak-aloud-switch"
          value={true}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          coach speaks — use an earbud
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="scoreboard-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Scoreboard
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="scoreboard-switch"
          value={false}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          off
        </Text>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Empathy: 
          50
           — 
          Balanced
        </Text>
        <View
          testID="empathy-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Assertive
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Full Empathy
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Interject: 
          0
           — 
          Every turn
        </Text>
        <View
          testID="interject-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Every turn
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Critical only
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "gap": 6,
            "marginHorizontal": 16,
            "marginVertical": 6,
            "padding": 12,
          }
        }
        testID="live-preflight"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 13,
              "fontWeight": "700",
              "letterSpacing": 0.4,
              "textTransform": "uppercase",
            }
          }
        >
          Before you start
        </Text>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 8,
            }
          }
          testID="preflight-stt"
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "700",
                  "width": 16,
                },
                {
                  "color": "#B45309",
                },
              ]
            }
          >
            ✗
          </Text>
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 13.5,
                "fontWeight": "600",
                "width": 118,
              }
            }
          >
            On-device speech
          </Text>
          <Text
            numberOfLines={2}
            style={
              {
                "color": "#6B7280",
                "flex": 1,
                "fontSize": 12.5,
                "lineHeight": 17,
              }
            }
          >
            on-device speech recognition isn't available here
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 8,
            }
          }
          testID="preflight-speaker-id"
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "700",
                  "width": 16,
                },
                {
                  "color": "#B45309",
                },
              ]
            }
          >
            ✗
          </Text>
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 13.5,
                "fontWeight": "600",
                "width": 118,
              }
            }
          >
            Speaker-ID
          </Text>
          <Text
            numberOfLines={2}
            style={
              {
                "color": "#6B7280",
                "flex": 1,
                "fontSize": 12.5,
                "lineHeight": 17,
              }
            }
          >
            server labels voices by speaking order
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "gap": 8,
            }
          }
          testID="preflight-llm"
        >
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "700",
                  "width": 16,
                },
                {
                  "color": "#15803D",
                },
              ]
            }
          >
            ✓
          </Text>
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 13.5,
                "fontWeight": "600",
                "width": 118,
              }
            }
          >
            Suggestions
          </Text>
          <Text
            numberOfLines={2}
            style={
              {
                "color": "#6B7280",
                "flex": 1,
                "fontSize": 12.5,
                "lineHeight": 17,
              }
            }
          >
            cloud
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 13,
              "fontWeight": "700",
              "letterSpacing": 0.4,
              "marginTop": 6,
              "textTransform": "uppercase",
            }
          }
        >
          Who's here
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 6,
            }
          }
          testID="whos-here"
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "flex": 1,
                "fontSize": 12.5,
                "lineHeight": 17,
              }
            }
            testID="whos-here-empty"
          >
            Nobody enrolled yet — voices will be labelled by speaking order. Enroll yourself and the people you talk with in Settings → Voice.
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#E5E7EB",
            "borderRadius": 12,
            "borderWidth": 1,
            "gap": 6,
            "marginHorizontal": 16,
            "marginVertical": 6,
            "padding": 14,
          }
        }
        testID="idle-explainer"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 13.5,
              "lineHeight": 19,
            }
          }
        >
          Hold the phone to your ear as you normally would.
        </Text>
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 13.5,
              "lineHeight": 19,
            }
          }
        >
          Tap Start, then speak first — the coach learns which voice is yours.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 40,
          }
        }
        testID="live-transcript-empty"
      >
        <Text
          style={
            {
              "color": "#9CA3AF",
              "fontSize": 15,
              "fontStyle": "italic",
            }
          }
        >
          Waiting for conversation...
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4A90D9",
        "borderRadius": 12,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "opacity": 1,
        "paddingVertical": 16,
      }
    }
    testID="mic-toggle"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Start Listening
    </Text>
  </View>
</View>
`;

exports[`LiveCoachScreen renders recording state with transcript and suggestions 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9FAFB",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 8,
      }
    }
    keyboardShouldPersistTaps="handled"
    style={
      {
        "flex": 1,
      }
    }
    testID="live-coach-scroll"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#111827",
              "flex": 1,
              "flexShrink": 1,
              "fontSize": 24,
              "fontWeight": "700",
              "marginRight": 8,
            }
          }
        >
          Live Coach
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 0,
              "gap": 6,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "height": 10,
                  "width": 10,
                },
                {
                  "backgroundColor": "#10B981",
                },
              ]
            }
            testID="connection-status"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 13,
                  "fontWeight": "600",
                  "minWidth": 92,
                  "textAlign": "right",
                  "textTransform": "capitalize",
                },
                {
                  "color": "#10B981",
                },
              ]
            }
          >
            live
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingBottom": 4,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#EFF6FF",
              "borderColor": "#4A90D9",
              "borderRadius": 16,
              "borderWidth": 1,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 6,
            }
          }
          testID="self-speaker-chip"
        >
          <Text
            style={
              {
                "color": "#4A90D9",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            You: 
            Speaker A
             ⇄
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "gap": 6,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="live-mode-picker"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Session mode
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 6,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#4A90D9",
                "borderColor": "#4A90D9",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 0.6,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-earpiece"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Earpiece
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 0.6,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-speaker"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              In person
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 0.6,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-therapist"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Therapist
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D1D5DB",
                "borderRadius": 16,
                "borderWidth": 1,
                "opacity": 0.6,
                "paddingHorizontal": 14,
                "paddingVertical": 6,
              }
            }
            testID="session-mode-call"
          >
            <Text
              style={
                [
                  {
                    "color": "#6B7280",
                    "fontSize": 13,
                    "fontWeight": "500",
                  },
                  false,
                ]
              }
            >
              Call
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 12.5,
              "lineHeight": 17,
            }
          }
          testID="session-mode-hint"
        >
          Phone to your ear or on a call — the coach whispers to you privately.
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="speak-aloud-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Speak aloud
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="speak-aloud-switch"
          value={true}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          coach speaks — use an earbud
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 16,
            "paddingVertical": 6,
          }
        }
        testID="scoreboard-row"
      >
        <Text
          style={
            {
              "color": "#374151",
              "fontSize": 14,
              "fontWeight": "600",
              "marginRight": 4,
            }
          }
        >
          Scoreboard
        </Text>
        <RCTSwitch
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="scoreboard-switch"
          value={false}
        />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "flex": 1,
              "fontSize": 12,
            }
          }
        >
          off
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 6,
            "paddingBottom": 6,
            "paddingHorizontal": 16,
          }
        }
        testID="speaker-chips"
      >
        <View
          accessibilityLabel="Who is Speaker A?"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D1D5DB",
              "borderRadius": 14,
              "borderWidth": 1,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="speaker-chip-Speaker A"
        >
          <Text
            style={
              [
                {
                  "color": "#374151",
                  "fontSize": 12,
                  "fontWeight": "600",
                },
                false,
              ]
            }
          >
            Speaker A
             · who?
          </Text>
        </View>
        <View
          accessibilityLabel="Who is Speaker B?"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D1D5DB",
              "borderRadius": 14,
              "borderWidth": 1,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="speaker-chip-Speaker B"
        >
          <Text
            style={
              [
                {
                  "color": "#374151",
                  "fontSize": 12,
                  "fontWeight": "600",
                },
                false,
              ]
            }
          >
            Speaker B
             · who?
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": 4,
            "paddingHorizontal": 16,
          }
        }
        testID="session-strip"
      >
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 12.5,
              "fontWeight": "600",
            }
          }
        >
          Earpiece
        </Text>
        <Text
          style={
            [
              {
                "color": "#6B7280",
                "fontSize": 12.5,
                "fontWeight": "600",
              },
              false,
            ]
          }
          testID="escalation-count"
        >
          escalations: 0
        </Text>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Empathy: 
          50
           — 
          Balanced
        </Text>
        <View
          testID="empathy-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Assertive
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Full Empathy
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginVertical": 12,
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1F2937",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 8,
            }
          }
        >
          Interject: 
          0
           — 
          Every turn
        </Text>
        <View
          testID="interject-slider"
        />
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Every turn
          </Text>
          <Text
            style={
              {
                "color": "#6B7280",
                "fontSize": 12,
              }
            }
          >
            Critical only
          </Text>
        </View>
      </View>
      <RCTScrollView
        style={
          {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="live-transcript"
      >
        <View>
          <View
            style={
              [
                {
                  "backgroundColor": "#F9FAFB",
                  "borderRadius": 8,
                  "marginBottom": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 6,
                },
                false,
              ]
            }
          >
            <View
              accessibilityLabel="Who is Speaker A?"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 6,
                  "left": 6,
                  "right": 6,
                  "top": 6,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="live-transcript-speaker-0"
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "700",
                      "marginBottom": 2,
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#4A90D9",
                    },
                  ]
                }
              >
                Speaker A
                <Text
                  style={
                    {
                      "color": "#9CA3AF",
                      "fontSize": 10,
                      "fontWeight": "500",
                      "textTransform": "none",
                    }
                  }
                >
                   · who?
                </Text>
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "color": "#1F2937",
                    "fontSize": 15,
                    "lineHeight": 22,
                  },
                  false,
                ]
              }
            >
              You never listen to me.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#F9FAFB",
                  "borderRadius": 8,
                  "marginBottom": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 6,
                },
                {
                  "backgroundColor": "#EEF2FF",
                  "borderLeftColor": "#4A90D9",
                  "borderLeftWidth": 3,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Who is Speaker B?"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 6,
                  "left": 6,
                  "right": 6,
                  "top": 6,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="live-transcript-speaker-1"
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "700",
                      "marginBottom": 2,
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#E85D75",
                    },
                  ]
                }
              >
                Speaker B
                <Text
                  style={
                    {
                      "color": "#9CA3AF",
                      "fontSize": 10,
                      "fontWeight": "500",
                      "textTransform": "none",
                    }
                  }
                >
                   · who?
                </Text>
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "color": "#1F2937",
                    "fontSize": 15,
                    "lineHeight": 22,
                  },
                  {
                    "fontWeight": "500",
                  },
                ]
              }
            >
              I'm trying my best.
            </Text>
          </View>
        </View>
      </RCTScrollView>
      <RCTScrollView
        horizontal={false}
        style={
          {
            "maxHeight": 200,
            "paddingBottom": 8,
          }
        }
        testID="suggestions-list"
      >
        <View>
          <Text
            style={
              {
                "color": "#1F2937",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
                "paddingHorizontal": 16,
                "paddingTop": 8,
              }
            }
          >
            Suggestions
          </Text>
          <View
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 12,
                    "elevation": 2,
                    "marginHorizontal": 16,
                    "marginVertical": 6,
                    "padding": 16,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.1,
                    "shadowRadius": 3,
                  },
                  false,
                ]
              }
              testID="suggestion-card"
            >
              <View
                style={
                  [
                    {
                      "alignSelf": "flex-start",
                      "borderRadius": 12,
                      "marginBottom": 8,
                      "paddingHorizontal": 10,
                      "paddingVertical": 3,
                    },
                    {
                      "backgroundColor": "#10B981",
                    },
                  ]
                }
              >
                <Text
                  style={
                    {
                      "color": "#FFFFFF",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  empathetic
                </Text>
              </View>
              <Text
                style={
                  {
                    "color": "#1F2937",
                    "fontSize": 15,
                    "lineHeight": 22,
                  }
                }
              >
                I hear that you feel unheard. Can you help me understand what you need?
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#EF4444",
        "borderRadius": 12,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "opacity": 1,
        "paddingVertical": 16,
      }
    }
    testID="mic-toggle"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Stop Listening
    </Text>
  </View>
</View>
`;
